--- a/src/ArmedMFG.PublicApi/appsettings.json
+++ b/src/ArmedMFG.PublicApi/appsettings.json
@@ -4,6 +4,7 @@
     "webBase": "https://localhost:5001/"
   },
   "ConnectionStrings": {
+    "ProductsConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.ProductsDb;",
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
