--- a/src/ArmedMFG.BlazorAdmin/ArmedMFG.BlazorAdmin.csproj
+++ b/src/ArmedMFG.BlazorAdmin/ArmedMFG.BlazorAdmin.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" />
+		<PackageReference Include="Syncfusion.Blazor" />
 		<PackageReference Include="System.Net.Http.Json" />
 	</ItemGroup>
 
@@ -26,9 +27,4 @@
 			<DependentUpon>Edit.cs</DependentUpon>
 		</Compile>
 	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Pages\ProductProducingPage" />
-	</ItemGroup>
-
 </Project>
