Add MaterialSupply Pages for Crud operations

--- a/src/ArmedMFG.BlazorAdmin/ArmedMFG.BlazorAdmin.csproj
+++ b/src/ArmedMFG.BlazorAdmin/ArmedMFG.BlazorAdmin.csproj
@@ -27,4 +27,9 @@
 			<DependentUpon>Edit.cs</DependentUpon>
 		</Compile>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="Pages\ProductTypePage\ProductPricePage\Create.razor" />
+	  <_ContentIncludedByDefault Remove="Pages\ProductTypePage\ProductPricePage\List.razor" />
+	</ItemGroup>
 </Project>
