Solve problems with connecting to real database

--- a/src/ArmedMFG.PublicApi/appsettings.Development.json
+++ b/src/ArmedMFG.PublicApi/appsettings.Development.json
@@ -1,5 +1,9 @@
 {
-  "UseOnlyInMemoryDatabase": true,
+  "UseOnlyInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "ProductionConnection": "Server=ARMED-PC;Database=ArmedMFG.Production;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=ARMED-PC;Database=ArmedMFG.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "baseUrls": {
     "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:5001/"
