--- a/src/ArmedMFG.PublicApi/appsettings.json
+++ b/src/ArmedMFG.PublicApi/appsettings.json
@@ -4,9 +4,8 @@
     "webBase": "https://localhost:5001/"
   },
   "ConnectionStrings": {
-    "ProductsConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.ProductsDb;",
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "ProductionConnection": "Server=ARMED-PC;Database=ArmedMFG.Production;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=ARMED-PC;Database=ArmedMFG.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "CatalogBaseUrl": "",
   "Logging": {
