Fix problems with deployment

--- a/src/ArmedMFG.Web/appsettings.json
+++ b/src/ArmedMFG.Web/appsettings.json
@@ -8,13 +8,13 @@
     "ProductionConnection": "Server=ARMED-PC;Database=ArmedMFG.Production;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "IdentityConnection": "Server=ARMED-PC;Database=ArmedMFG.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
-  "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft": "Warning",
-      "System": "Warning"
+      "System": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     },
     "AllowedHosts": "*"
   }
