Optimize ProductStock endpoints, Order endpoits, PaymentRecord endpoints

--- a/src/ArmedMFG.PublicApi/appsettings.Development.json
+++ b/src/ArmedMFG.PublicApi/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "UseOnlyInMemoryDatabase": false,
+  "UseOnlyInMemoryDatabase": true,
   "ConnectionStrings": {
     "ProductionConnection": "Server=ARMED-PC;Database=ArmedMFG.Production;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "IdentityConnection": "Server=ARMED-PC;Database=ArmedMFG.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
