--- a/src/ArmedMFG.PublicApi/appsettings.json
+++ b/src/ArmedMFG.PublicApi/appsettings.json
@@ -7,7 +7,7 @@
     "ProductionConnection": "Server=ARMED-PC;Database=ArmedMFG.Production;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "IdentityConnection": "Server=ARMED-PC;Database=ArmedMFG.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
-  "UseOnlyInMemoryDatabase": false,
+  "UseOnlyInMemoryDatabase": true,
   "ProductsBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
